@@ -6,6 +6,7 @@ Change Log:
 ----------------------------------------------------------------------
 
 3.0.6 ( 2017-0x-xx )
+- Fixed frash message for pro version.
 
 3.0.5 ( 2017-04-25 )
 - Improved columns display on post list screen - now "Custom Sidebars" column is hidden by default.
